# Restaurant-API-Rust

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  integration_tests.rs  main.rs
models/: Cargo.toml
models/src/: lib.rs
src/: main.rs  tests.rs
